<resources>
    <string name="app_name">Swipe Analyser</string>
    <string name="consent_text">Following this screen your previously indicated handedness and gender selections will be stored and touch event recording will start. Click below to approve and continue. Approval can be revoked at any time via the Information screen.</string>
    <string name="agree_and_continue">Continue</string>
    <string name="app_explanation">This application gathers your touch data for research purposes while you play the following game. The target of the research is to analyse touch interaction data, in order to establish whether the data can be applied to identify generalised properties which differentiate a certain group of users from other groups. All data is anonymous.</string>
    <string name="app_title">Swipe Profiler</string>
    <string name="woman_using_phone">woman using phone</string>
    <string name="gender_description">For data labelling purposes, please indicate your gender</string>
    <string name="handedness_description">For data labelling purposes, please indicate your primary handedness</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="continue_txt">Continue</string>
    <string name="handedness">Handedness</string>
    <string name="last_step">Last step!</string>
    <string name="next">next</string>
    <string name="accept">Accept</string>
    <string name="request_data_removal">Request data removal</string>
    <string name="click_the_button_below_to_request_the_removal_of_data_related_to_the_current_usage_session_identifier_please_note_that_as_data_is_not_identifiable_you_will_not_receive_a_notification_upon_data_removal">Click the button below to request the removal of data related to the current usage session identifier. Please note that as data is not identifiable, you will not receive a notification upon data removal.</string>
    <string name="stored_data">Stored data</string>
    <string name="the_following_data_is_stored">The following data is stored</string>
    <string name="indicated_gender_and_handedness">Indicated gender and handedness \nDevice screen size and resolution \nTouch points: X and Y positions, timestamp, velocity and touch size estimation.</string>
    <string name="touch_points_explanation">Touch points: X and Y positions, timestamp, velocity and touch size estimation.</string>
    <string name="contact">Contact</string>
    <string name="the_developer_can_be_contacted_at">The developer can be contacted at</string>
    <string name="request_removal">Request removal</string>
    <string name="matti_maki_kihnia_aalto_fi">matti.maki-kihnia@aalto.fi</string>
    <string name="information">Information</string>
    <string name="go_back">Go back</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="open_source_libraries_used_in_this_project">Open source libraries used in this project</string>
    <string name="mit_license">The MIT License (MIT) Copyright © 2014 Paul Sarbinowski Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the Software), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. THE SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="android_2048">2048-android</string>
    <string name="game_description">The 2048 game is an open source port of the original 2048 game created by Gabriele Cirulli. The original game can be found from the link below.</string>
    <string name="game_url">https://github.com/uberspot/2048-android</string>
    <string name="https_github_com_gabrielecirulli_2048">https://github.com/gabrielecirulli/2048</string>
    <string name="consent_form">Consent form</string>
    <string name="research_consent_text">This application is created as a data-gathering platform for a Master\'s thesis project. The goal of this research is to establish whether it is possible to identify a user\'s gender and handedness based on their touch gestures. \n \n Participation in this research is voluntary and the user can choose to not accept these terms. Data is only recorded after the user\'s approval. This application includes functionality with which the user can request the removal of the data associated with their current user session. \n \n The gestures performed within this application are recorded and stored on a remote database. Gesture data is associated with the user\'s personal data - gender and handedness - which the user indicates on the following screens. No other information besides the user\'s gender and handedness are requested. Personal data is required in order to correctly categorize the recorded gestures.\n Furthermore, the user\'s device screen size and resolution are stored. The information inferred from the gathered data is not associated with a user nor is it permanently stored. \n \n All the aforementioned data is associated with an anonymous, randomly generated user identifier, and as such the data cannot be related to a person. \n \n If you have any questions or concerns about the research, please contact Matti Mäki-Kihniä for further information (matti.maki-kihnia@aalto.fi). \n \n</string>
    <string name="i_agree_to_participate_in_the_research">I agree to participate in the research</string>
</resources>
