<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.github.harmittaa.touchobserver.screens.onboarding.OnboardingViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:contentDescription="@string/woman_using_phone"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/centerGuideHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hand_selection_red" />

            <TextView
                android:id="@+id/obThirdTitle"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/handedness"
                app:layout_constraintTop_toBottomOf="@id/centerGuideHorizontal" />

            <TextView
                android:id="@+id/textView"
                style="@style/Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/handedness_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/obThirdTitle" />

            <Button
                android:id="@+id/leftButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="64dp"
                android:background="@drawable/button_twostate_green_color"
                android:elevation="0dp"
                android:text="@string/left"
                android:textColor="@color/white"
                app:isSelected="@{viewModel.leftSelectedLv}"
                app:layout_constraintEnd_toEndOf="@id/centerGuideVertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <Button
                android:id="@+id/rightButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="64dp"
                android:background="@drawable/button_twostate_green_color"
                android:elevation="0dp"
                android:text="@string/right"
                android:textColor="@color/white"
                app:isSelected="@{viewModel.rightSelectedLv}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/centerGuideVertical"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <Button
                android:id="@+id/continueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_24"
                android:background="@drawable/button_twostate_green_color"
                android:elevation="0dp"
                android:enabled="@{viewModel.rightSelectedLv || viewModel.leftSelectedLv}"
                android:text="@string/continue_txt"
                android:textColor="@color/white"
                app:isSelected="@{viewModel.rightSelectedLv || viewModel.leftSelectedLv}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rightButton"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuideVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuideHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
