<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:contentDescription="@string/woman_using_phone"
                app:layout_constraintBottom_toTopOf="@id/centerGuide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/woman_phone_bg" />

            <TextView
                android:id="@+id/obFirstTitle"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@id/centerGuide" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/obFirstDescription"
                style="@style/Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="@font/open_sans"
                android:text="@string/app_explanation"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/obFirstTitle" />

            <Button
                android:id="@+id/continueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_24"
                android:background="@drawable/main_button_background"
                android:elevation="0dp"
                android:text="@string/continue_txt"
                android:layout_marginTop="@dimen/margin_16"
                android:textColor="@color/white"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/obFirstDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
